[gd_scene load_steps=12 format=3 uid="uid://ckfp4vtlgmrgk"]

[ext_resource type="Script" path="res://scenes/options_menu.gd" id="1_aaeme"]
[ext_resource type="Shader" path="res://shaders/wavy_canvas.gdshader" id="1_coam4"]
[ext_resource type="FontFile" uid="uid://ccs8rh8s7ngx5" path="res://fonts/Jackpot.ttf" id="2_fvfqh"]
[ext_resource type="Texture2D" uid="uid://ble5vmpcbm8r" path="res://sprites/icon-check.png" id="4_6g5le"]
[ext_resource type="Texture2D" uid="uid://s7f3rnvalkh3" path="res://sprites/icons-uncheck.png" id="6_rcvll"]
[ext_resource type="Script" path="res://scripts/checkbox_container.gd" id="8_pkqn1"]
[ext_resource type="Script" path="res://scripts/option_container.gd" id="9_t8uob"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sdy7f"]
shader = ExtResource("1_coam4")
shader_parameter/wave_weight = 5.0
shader_parameter/frequency = 15.0
shader_parameter/speed = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_qbbkt"]
font = ExtResource("2_fvfqh")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_wrypp"]
font = ExtResource("2_fvfqh")
font_color = Color(0.0980392, 0.0941176, 0.266667, 1)

[sub_resource type="Theme" id="Theme_d02hv"]
default_font = ExtResource("2_fvfqh")

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aaeme")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.827451, 0.776471, 0.745098, 1)

[node name="Label" type="Label" parent="."]
material = SubResource("ShaderMaterial_sdy7f")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.0
offset_top = 50.0
offset_right = 134.0
offset_bottom = 86.0
grow_horizontal = 2
text = "Options"
label_settings = SubResource("LabelSettings_qbbkt")

[node name="OptionsContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 325)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -85.0
offset_right = 125.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -25
alignment = 1

[node name="SoundContainer" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("8_pkqn1")

[node name="Label" type="Label" parent="OptionsContainer/SoundContainer"]
layout_mode = 2
text = "Sound"
label_settings = SubResource("LabelSettings_wrypp")

[node name="CheckBox" type="CheckBox" parent="OptionsContainer/SoundContainer"]
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
theme = SubResource("Theme_d02hv")
theme_override_icons/checked = ExtResource("4_6g5le")
theme_override_icons/unchecked = ExtResource("6_rcvll")

[node name="FullscreenContainer" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("8_pkqn1")

[node name="Label" type="Label" parent="OptionsContainer/FullscreenContainer"]
layout_mode = 2
text = "Fullscreen"
label_settings = SubResource("LabelSettings_wrypp")

[node name="CheckBox" type="CheckBox" parent="OptionsContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2
theme = SubResource("Theme_d02hv")
theme_override_icons/checked = ExtResource("4_6g5le")
theme_override_icons/unchecked = ExtResource("6_rcvll")

[node name="BackContainer" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("9_t8uob")

[node name="Label" type="Label" parent="OptionsContainer/BackContainer"]
layout_mode = 2
text = "Back"
label_settings = SubResource("LabelSettings_wrypp")
